--- a/views/faq.html
+++ b/views/faq.html
@@ -65,7 +65,7 @@
             <dd>
                 <b><a name="giveaway"></a>How can I get free bits?</b>
                 <p>
-                    Every minute you can claim 2 free nits on your account page. We do this so that you may test and enjoy the game
+                    Every minute you can claim 2 free bits on your account page. We do this so that you may test and enjoy the game
                     without any commitment. There are no strings attached, you may withdraw this money if you so please, but
                     we ask you to refrain from abusing this feature =)
                 </p>
