--- a/client/css/header.css
+++ b/client/css/header.css
@@ -44,7 +44,7 @@
   width: 36px;
   height: 36px;
   overflow: hidden;
-  background-image: url("/img/balance-nxt-icon.png");
+  background-image: url("/img/balance-icon.png");
 }
 
 h1.logo {
