Added source link and zero digits for bet amount

--- a/views/index.html
+++ b/views/index.html
@@ -51,6 +51,7 @@
                 <p>btc.tothemoon.me</p>
                 <nav>
                     <ul>
+                        <li><a href="https://github.com/TwinWinNerD/bustabit-webserver/tree/master-bitcoin">Source</a></li>
                         <li><a href="/faq">FAQ</a></li>
                         <li><a href="/contact">Contact</a></li>
                         <li><a href="/leaderboard">Leaderboard</a></li>
