--- a/views/401.html
+++ b/views/401.html
@@ -5,7 +5,7 @@
 <div class="panel rounded not-found">
     <div class="row">
         <div class="large-1 columns">
-            <img src="/img/logo.png" alt=""/>
+            <img src="/img/balance-icon.png" />
         </div>
         <div class="large-11 columns">
             <h2>You are not authorized to see this </h2>
