Update to Bitcoin

--- a/views/faq.html
+++ b/views/faq.html
@@ -9,10 +9,10 @@
         <div class="faq-nav">
             <ul class="side-nav">
                 <li><a href="#how-to-play">How to play?</a></li>
-                <li><a href="#bits">What is a NXT?</a></li>
+                <li><a href="#bits">What is a bit?</a></li>
                 <li><a href="#plugin">How to play from the NXT plugin?</a></li>
-                <li><a href="#giveaway">How can I get free NXT?</a></li>
-                <li><a href="#deposit">How do I deposit NXT?</a></li>
+                <li><a href="#giveaway">How can I get free bits?</a></li>
+                <li><a href="#deposit">How do I deposit bits?</a></li>
                 <li><a href="#deposit-address">How long is the unique account number valid?</a></li>
                 <li><a href="#deposit-time">How long for deposits to be credited to account?</a></li>
                 <li><a href="#withdraw">How do I withdraw bits?</a></li>
@@ -34,11 +34,11 @@
     <div class="columns large-9">
         <dl>
             <h3 id="basics">Basics</h3>
-            <dd><b><a name="bitcoin-gambling"></a>What is NXT gambling?</b>
+            <dd><b><a name="bitcoin-gambling"></a>What is bitcoin gambling?</b>
                 <p>
-                    NXT gambling is a general term for any type of gambling wherein bets are placed in units of
-                    NXT as opposed to a fiat currency, Bitcoin or any other asset. Learn more about
-                    <a href="bitcoin-gambling">NXT gambling</a> or the history of <a href="online-gambling-meets-bitcoin">online gambling and bitcoin</a>.
+                    Bitcoin gambling is a general term for any type of gambling wherein bets are placed in units of
+                    bitcoin as opposed to a fiat currency or any other asset. Learn more about
+                    <a href="bitcoin-gambling">bitcoin gambling</a> or the history of <a href="online-gambling-meets-bitcoin">online gambling and bitcoin</a>.
                 </p>
             </dd>
 
@@ -50,67 +50,59 @@
                 </p>
             </dd>
             <dd>
-                <b><a name="bits"></a>What is a NXT?</b>
+                <b><a name="bits"></a>What is a bit?</b>
                 <p>
-                    A NXT is the basic Unit of the NXT-Currency. At the time of this writing, a single NXT is worth roughly $0.0094 USD. A NXT is divisible 100,000,000 times to 1 NXTquant or 0.00000001 NXT.
-                    You are able to deposit and withdraw NXT at any time by going to your <a href="/account">account page</a>.
+                    A bit is a millionth of a bitcoin or 100 satoshis. At the time of this writing, a single bit is worth roughly $0.0003 USD. You are able to deposit and withdraw bits at any time by going to your <a href="/account">account page</a>.
                 </p>
             </dd>
             <dd>
                 <b><a name="plugin"></a>How to play from the NXT plugin?</b>
                 <p>
-                    You can play NXTBubble directly from you NRS NXT client. Just click this link and follow the instructions: <br>
+                    You can play ToTheMoon directly from you NRS NXT client. Just click this link and follow the instructions: <br>
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-nxt-plugin-download-play-directly-in-nrs-1-5-x-clients/">Nxtforum.org thread</a>
                 </p>
             </dd>
             <dd>
-                <b><a name="giveaway"></a>How can I get free NXT?</b>
+                <b><a name="giveaway"></a>How can I get free bits?</b>
                 <p>
-                    Every minute you can claim 0.02 free NXT on your account page. We do this so that you may test and enjoy the game
+                    Every minute you can claim 2 free bits on your account page. We do this so that you may test and enjoy the game
                     without any commitment. There are no strings attached, you may withdraw this money if you so please, but
                     we ask you to refrain from abusing this feature =)
                 </p>
             </dd>
              <h3>Deposits</h3>
             <dd>
-                <b><a name="deposit"></a>How do I deposit NXT?</b>
+                <b><a name="deposit"></a>How do I deposit bits?</b>
                 <p>
-                    Go to your Account and you will find a NXT address and unique account number. When sending NXT to this address, you <strong>MUST</strong>
-                    include this number as an <strong>unencrypted message</strong> when sending the payment. So you can't send directly from an exchange!
+                   You will need to transfer bitcoins to the deposit address on your account page. You can send from your private wallet or any hotwallet, as your deposit address is unique and can be reused as many times as you want. And remember, you can withdraw directly to the bitcoin address on your account page!
                 </p>
             </dd>
             <dd>
                 <b><a name="deposit-address"></a>How long is the unique account number valid?</b>
                 <p>
                     It is <strong>permanently</strong> attached to your account. You can save it, or use it for automatic
-                    funding, or whatever else you like. All payments sent to our address, that contain the unique account number, will be automatically credited to your account.
+                    funding, or whatever else you like. All payments sent to our address, will be automatically credited to your account.
                 </p>
             </dd>
             <dd>
                 <b><a name="deposit-time"></a>How long do deposits take to be credited?</b>
                 <p>
-                    We instantly credit accounts upon a single confirmation, which on average is approximately 2 minutes from the time of the transaction.
+                    We instantly credit accounts upon a single confirmation, which on average is approximately 10 minutes from the time of the transaction.
                 </p>
             </dd>
             <dd>
-                <b><a name="withdraw"></a>How do I withdraw NXT?</b>
+                <b><a name="withdraw"></a>How do I withdraw bits?</b>
                 <p>
-                    On your account page, you can transfer NXT to any NXT address you want. Small withdrawals
-                    (i.e. smaller than the balance of our hot-wallet) are processed instantly and you will be given the transaction ID immediately.
+                    On your account page, you can transfer bits to any bitcoin address you want. Small withdrawals (i.e. smaller than the balance of our hot-wallet) are processed instantly and you will be given the transaction ID immediately
                 </p>
                 <p>
-                    Larger withdrawals will be shown in your withdrawal page as "PENDING" and will require us to manually remove
-                    sufficient funds from our cold storage. Usually this process will take less than two hours, but may take up to 24 hours,
-                    depending on the time of day and other circumstances.
+                    If you want to withdraw an amount greater than the funds in the hotwallet, please contact the support so that they can refill the hotwallet.
                 </p>
                 <p>
-                    We remove 1 NXT (about 0.0094 USD) from any withdrawal amount to cover transaction fees. We charge this amount
-                    <strong>regardless</strong> of the actual mining fees attached to the transaction, which may be more or less
-                    than this, depending on the block competition at the time of your withdrawal.
+                    We remove 100 bits (about 0.023 USD) from any withdrawal amount to cover mining fees. We charge this amount regardless of the actual mining fees attached to the transaction, which may be more than this, depending on the block competition at the time of your withdrawal.
                 </p>
                 <p>
-                   The minimum withdrawal amount is 1.01 NXT. Please remember that 1 NXT fee will be deducted, so if you
-                   withdraw the minimum amount, you will only receive 0.01 NXT! I would not advise doing that.
+                   Withdrawals must be in increments of 1 bit (100 satoshis), with a minimum withdrawal of 200 bits (of which 100 bits goes towards the mining fee). As required, we will chip in our own money to help expedite confirmation time, such that we typically pay 200 bits in mining fees, despite charging you only 100 bits.
                 </p>
             </dd>
             <dd>
@@ -137,7 +129,7 @@
                 </p>
             </dd>
             <dd>
-                <b><a name="limit"></a>What is the most I can bet?</b>
+                <b><a name="limit"></a>What is the most I can win in a bet?</b>
                 <p>
                     This depends on the house bankroll and is changing constanly. Just go to "Play" and check it out yourself.
                 </p>
@@ -146,21 +138,17 @@
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
                     The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
-                    is critical to skillful playing of NXTBubble, as it is the <strong>only</strong> way to overcome house odds.
+                    is critical to skillful playing of ToTheMoon, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
-                <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 NXT in the pot.
-                    If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 NXT bet gives 10 NXT bonus
-                    - or 1/40th bonus per NXT bet. It then applies the same rate to whoever actually wins.
-                </p>
-                <p>So if the 100 NXT player wins, he gets 1/40th of 100, or 2.5 NXT. That leaves 7.5 NXT in the pot,
-                    which goes to the next best placing player(s).
-                </p>
-                <p>Suppose the 200 NXT player comes 2nd. He is due 1/40th of 200, or 5 NXT. There are still 7.5 NXT in the pot,
-                    so he gets the full 5 NXT he is due - the same as if he had come in 1st place.
-                </p>
-                <p>
-                    Suppose the 300 NXT player comes 3rd. He's due 7.5 NXT (300/40) but there are only 2.5 NXT left in the pot, so he gets those and that's all. There's nothing left for the 4th or worse place players.
-                </p>
+                <p></p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 bits in the pot. If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 bits bet gives 10 bits bonus - or 1/40th bonus per bit bet. It then applies the same rate to whoever actually wins.</p>
+
+<p></p>So if the 100 bit player wins, he gets 1/40th of 100, or 2.5 bits. That leaves 7.5 bits in the pot, which goes to the next best placing player(s).</p>
+
+<p></p>Suppose the 200 bit player comes 2nd. He is due 1/40th of 200, or 5 bits. There are still 7.5 bits in the pot, so he gets the full 5 bits he is due - the same as if he had come in 1st place.</p>
+
+<p></p>Suppose the 300 bit player comes 3rd. He's due 7.5 bits (300/40) but there are only 2.5 bits left in the pot, so he gets those and that's all. There's nothing left for the 4th or worse place players.</p>
+
+<p></p>1% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.</p>
                 <p>
                     1.5% of games will instant bust (0x) and no bonuses will be awarded, all other games have bonuses equal to 1% of the amount wagered.
                 </p>
@@ -239,7 +227,7 @@
                     Absolutely! And we can prove it. Please see:
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-provable-fair-seeding-event/">the nxtforum.org thread</a>
                     for technical details.<br>
-                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">NXTBubble Verifier</a>.
+                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">ToTheMoon Verifier</a>.
                 </p>
             </dd>
             <dd>
