--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
         <div class="i-content">
             <div class="row">
                 <h4 class="sub-title">
-                    The NXT Gambling Game
+                    The Bitcoin Gambling Game
                 </h4>
             </div>
             <div class="large-12 columns">
@@ -113,9 +113,9 @@
                 </div>
             </div>
             <br>
-            <h5>NXTBubble is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</h5>
+            <h5>ToTheMoon! is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</h5>
             <br>
-            <h5 class="faucet">Claim 0.02 free NXT every minute, so you can always play for fun and without commitment!</h5>
+            <h5 class="faucet">Claim 2 free Bits every minute, so you can always play for fun and without commitment!</h5>
             <div class="features row show-for-large-up" style="margin-bottom: 100px;">
                 <div class="feature columns large-4 small-6">
                     <div>
