Comment out Invest button

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -42,7 +42,7 @@
       </div>
       <div class="menu header-el">
           <a href="/play">Play</a>
-//          <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
+          <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
           <a href="/request">Faucet</a>
           <a href="/weekly-leaderboard">Promotion</a>
           <a href="/leaderboard">Leaderboard</a>
@@ -65,7 +65,7 @@
         </ul>
         <div class="menu header-el">
           <a href="/play">Play</a>
-//          <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
+          /* <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a> */
           <a href="/request">Faucet</a>
           <a href="/weekly-leaderboard">Promotion</a>
           <a href="/leaderboard">Leaderboard</a>
