--- a/views/template/main.html
+++ b/views/template/main.html
@@ -21,7 +21,7 @@
             </div>
         {{??it.user.advice == 'new'}}
         <div class="success">
-            Welcome to NXTBubble.com, to start you can have 0.02 free NXT, NXT
+            Welcome to ToTheMoon.me, to start you can have 0.02 free NXT, NXT
             <a href="/request">you can request them here</a> or you can just watch the current games... have fun :D
 
         </div>
