--- a/views/account.html
+++ b/views/account.html
@@ -58,7 +58,7 @@
             </div>
             <div class="large-6 columns">
                 Transfer NXT, with the unique number attached <strong>unencrypted</strong>, to this address to have your account credited. Accounts
-                are only credited after <b>one NXT confirmation</b>
+                are only credited after <b>two NXT confirmations</b>
                 which depending on external factors can take a while. You can check
                 <a href="http://nxtportal.org/accounts/{{=it.user.deposit_address}}">nxtportal.org</a> to see if your
                 transactions have confirmed yet. Deposits take two confirmations, so about four minutes.
