--- a/views/faq.html
+++ b/views/faq.html
@@ -52,21 +52,21 @@
             <dd>
                 <b><a name="bits"></a>What is a NXT?</b>
                 <p>
-                    A NXT is the basic Unit of the NXT-Currency. At the time of this writing, a single NXT is worth roughly $0.0094 USD. A NXT is divisible 100,000,000 times to 1 NXTquant or 0.00000001 NXT.
+                    A NXT is the basic Unit of the NXT-Currency. At the time of this writing, a single NXT is worth roughly $0.012 USD. A NXT is divisible 100,000,000 times to 1 NXTquant or 0.00000001 NXT.
                     You are able to deposit and withdraw NXT at any time by going to your <a href="/account">account page</a>.
                 </p>
             </dd>
             <dd>
                 <b><a name="plugin"></a>How to play from the NXT plugin?</b>
                 <p>
-                    You can play NXTBubble directly from you NRS NXT client. Just click this link and follow the instructions: <br>
+                    You can play ToTheMoon directly from you NRS NXT client. Just click this link and follow the instructions: <br>
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-nxt-plugin-download-play-directly-in-nrs-1-5-x-clients/">Nxtforum.org thread</a>
                 </p>
             </dd>
             <dd>
                 <b><a name="giveaway"></a>How can I get free NXT?</b>
                 <p>
-                    Every minute you can claim 0.02 free NXT on your account page. We do this so that you may test and enjoy the game
+                    Every other minute you can claim 0.02 free NXT on your account page. We do this so that you may test and enjoy the game
                     without any commitment. There are no strings attached, you may withdraw this money if you so please, but
                     we ask you to refrain from abusing this feature =)
                 </p>
@@ -89,7 +89,7 @@
             <dd>
                 <b><a name="deposit-time"></a>How long do deposits take to be credited?</b>
                 <p>
-                    We instantly credit accounts upon a single confirmation, which on average is approximately 2 minutes from the time of the transaction.
+                    We instantly credit accounts upon two confirmations, which on average is approximately 4 minutes from the time of the transaction.
                 </p>
             </dd>
             <dd>
@@ -104,7 +104,7 @@
                     depending on the time of day and other circumstances.
                 </p>
                 <p>
-                    We remove 1 NXT (about 0.0094 USD) from any withdrawal amount to cover transaction fees. We charge this amount
+                    We remove 1 NXT (about 0.012 USD) from any withdrawal amount to cover transaction fees. We charge this amount
                     <strong>regardless</strong> of the actual mining fees attached to the transaction, which may be more or less
                     than this, depending on the block competition at the time of your withdrawal.
                 </p>
@@ -146,7 +146,7 @@
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
                     The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
-                    is critical to skillful playing of NXTBubble, as it is the <strong>only</strong> way to overcome house odds.
+                    is critical to skillful playing of ToTheMoon, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
                 <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 NXT in the pot.
                     If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 NXT bet gives 10 NXT bonus
@@ -239,7 +239,7 @@
                     Absolutely! And we can prove it. Please see:
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-provable-fair-seeding-event/">the nxtforum.org thread</a>
                     for technical details.<br>
-                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">NXTBubble Verifier</a>.
+                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">ToTheMoon Verifier</a>.
                 </p>
             </dd>
             <dd>
