--- a/views/guide.html
+++ b/views/guide.html
@@ -5,7 +5,7 @@
     <h3>Strategy Guide</h3>
     <hr>
     <p>
-        <b>NXTBubble</b> is a game of 99% luck, but 1% skill. This means that if you play in a strategy-oblivious way, you'll
+        <b>ToTheMoon</b> is a game of 99% luck, but 1% skill. This means that if you play in a strategy-oblivious way, you'll
         not do too bad. But with a good enough strategy, it's actually possible to overcome the house odds, and even make
         a profit.
 
@@ -15,7 +15,7 @@
     <h4>Instabust</h4>
     <p>
         Right off the bat, there's a <b>1.5%</b> chance of the game instantly busting. If this happens, no one can win anything.
-        This means nxtbubble.com has an expected return of <code>1.5% * playersInGame * tableAmount</code>. NXTBubble gives out 1% in bonuses
+        This means tothemoon.me has an expected return of <code>1.5% * playersInGame * tableAmount</code>. ToTheMoon gives out 1% in bonuses
         each round to create the competitiveness of the game.
     </p>
 
