--- a/views/register.html
+++ b/views/register.html
@@ -93,10 +93,10 @@
                             </div>
                             <div class="large-9 columns">
                               <p class="small">
-                                By accessing NXTBubble.com or its service:<br/>
+                                By accessing ToTheMoon.me or its service:<br/>
                                 Acknowledge that you have read and agree to the website's <a href="/terms-conditions" target="_blank">Terms &amp; Conditions.</a> <br/>
                                 Attest that you are 18 years old or older. <br/>
-                                Affirm that you are in a jurisdiction where the NXTBubble.com service is legal
+                                Affirm that you are in a jurisdiction where the ToTheMoon.me service is legal
                               </p>
                             </div>
                         </div>
