--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -44,11 +44,11 @@
                 that uses the sending address, or returns to sender, because any returns will probably be credited to a different player.
             </p>
             <form action="/withdraw-request" method="post">
-                <label for="amount">NXT</label>
+                <label for="amount">Amount NXT</label>
                 <input type="number" id="amount" name="amount" placeholder="1" min="1" step=".01" required/>
-                <label for="destination">Destination Address</label>
+                <label for="destination">Destination NXT Address (Note: Needs to be in RS format without any spaces!)</label>
                 <input type="text" id="destination" name="destination" required/>
-                <label for="password">Your NXTBubble password</label>
+                <label for="password">Your ToTheMoon password</label>
                 <input type="password" id="password" name="password" autocomplete="off"/>
                 {{?it.user.mfa_secret}}
                     <label for="otp">2FA Code</label>
