--- a/views/giveaway.html
+++ b/views/giveaway.html
@@ -8,8 +8,8 @@
         <form action="/admin-giveaway" id="contact" method="post">
             <label for="users">users:</label>
             <textarea id="users" rows="10" name="users" required></textarea>
-            <label for="bits">NXT </label>
-            <input type="number" id="bits" name="bits" min="1" max="50" value="1" required=""/>
+            <label for="bits">Bits </label>
+            <input type="number" id="bits" name="bits" min="1" max="100000" value="1" required=""/>
             <input type="submit" class="border-button right" value="add!"/>
             <a class="left border-button red" href="/admin">back</a>
         </form>
