--- a/views/weekly-leaderboard.html
+++ b/views/weekly-leaderboard.html
@@ -38,19 +38,19 @@
                         <a href="/user/{{=leader.username}}">{{=leader.username}}</a>
                     </td>
                     <td>
-                        {{#def.format: { n: leader.net_profit, decimals: 0 } }} NXT
+                        {{#def.format: { n: leader.net_profit, decimals: 0 } }} Bits
                     </td>
                     <td>
                         {{?leader.net_rank == 1 }}
-                            50000 NXT *
+                            50000 Bits *
                         {{?}}
 
                         {{?leader.net_rank == 2 }}
-                            30000 NXT *
+                            30000 Bits *
                         {{?}}
 
                         {{?leader.net_rank == 3 }}
-                            20000 NXT *
+                            20000 Bits *
                         {{?}}
 
                         {{?leader.net_rank == 4 || leader.net_rank == 5}}
@@ -93,19 +93,19 @@
                         <a href="/user/{{=leader.username}}">{{=leader.username}}</a>
                     </td>
                     <td>
-                        {{#def.format: { n: leader.wagered, decimals: 0 } }} NXT
+                        {{#def.format: { n: leader.wagered, decimals: 0 } }} Bits
                     </td>
                     <td>
                         {{?leader.wagered_rank == 1 }}
-                            100000 NXT *
+                            100000 Bits *
                         {{?}}
 
                         {{?leader.wagered_rank == 2 }}
-                            60000 NXT *
+                            60000 Bits *
                         {{?}}
 
                         {{?leader.wagered_rank == 3 }}
-                            40000 NXT *
+                            40000 Bits *
                         {{?}}
 
                         {{?leader.wagered_rank == 4 || leader.wagered_rank == 5}}
