--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -42,8 +42,8 @@
         <div class="small-10 columns sets-content">
             <h4>Request A Withdrawal</h4>
             <p class="small">
-                **The minimum amount for a withdrawal is 1 NXT. You will receive 1 NXT less than what you withdraw,
-                as we use that 1 NXT to go towards network fee.
+                **The minimum amount for a withdrawal is 200 Bits. You will receive 200 Bits less than what you withdraw,
+                as we use that 100 Bits to go towards network fee.
             </p>
 
             <p>
@@ -51,11 +51,11 @@
                 that uses the sending address, or returns to sender, because any returns will probably be credited to a different player.
             </p>
             <form action="/withdraw-request" method="post">
-                <label for="amount">NXT</label>
-                <input type="number" id="amount" name="amount" placeholder="1" min="1" step=".01" required/>
+                <label for="amount">Bits</label>
+                <input type="number" id="amount" name="amount" placeholder="1" min="200" step=".01" required/>
                 <label for="destination">Destination Address</label>
                 <input type="text" id="destination" name="destination" required/>
-                <label for="password">Your NXTBubble password</label>
+                <label for="password">Your ToTheMoon password</label>
                 <input type="password" id="password" name="password" autocomplete="off"/>
                 {{?it.user.mfa_secret}}
                     <label for="otp">2FA Code</label>
