--- a/views/account.html
+++ b/views/account.html
@@ -41,28 +41,25 @@
         <div class="small-10 columns">
             <h5>Account</h5>
             <hr>
-            <div class="large-6 columns">
-                <div class="panel radius">
-                    <b>Deposit Address:</b>
-                    <br/>
-                    <span>{{=it.user.deposit_address}}</span>
-                    <br/>
-                    <br/>
-                    <strong>You must attach an unencrypted message with only this number:
-                        <span style="color: black; font-size: 120%; background-color: lightgray"> {{=it.user.id}} </span> <span style="color: red;">*</span>
-                    </strong>
-
+                <div class="large-6 columns">
+                    <div class="panel radius">
+                        <b>Deposit Address:</b>
+                        <br/>
+                        {{?it.user.deposit_address}}
+                            <span>{{=it.user.deposit_address}}</span>
+                            <img src="https://chart.googleapis.com/chart?chs=200x200&cht=qr&chl={{=it.user.deposit_address}}&choe=UTF-8"/>
+                        {{??}}
+                            <a href="/create-deposit-address" class="button green">Create deposit address</a>
+                        {{?}}
+                    </div>
                 </div>
-
-            </div>
-            <div class="large-6 columns">
-                Transfer bitcoins to this address to have your account credited. Accounts are only credited after one bitcoin confirmation which depending on external factors can take a while. You can check <a href="https://blockchain.info/address/{{=it.user.deposit_address}}">blockchain.info</a> to see if your transactions have confirmed yet.
-                <strong><a href="/faq#deposit">
-                    <small>more?</small>
-                </a></strong>
-                <img src="/img/deposit-warning.png" style="margin-top: 15px;" />
-            </div>
-            <br/>
+                <div class="large-6 columns">
+                    Transfer bitcoins to this address to have your account credited. Accounts are only credited after one bitcoin confirmation which depending on external factors can take a while. You can check <a href="https://blockchain.info/address/{{=it.user.deposit_address}}">blockchain.info</a> to see if your transactions have confirmed yet.
+                    <strong><a href="/faq#deposit">
+                        <small>more?</small>
+                    </a></strong>
+                </div>
+                <br/>
 
             <div class="large-12 columns" style="margin-top: 20px;">
                 <h5>Account Information</h5>
