--- a/views/template/head.html
+++ b/views/template/head.html
@@ -1,7 +1,7 @@
 <head>
     <title>{{# def.page_title || 'Social Bitcoin Gambling' }} -- ToTheMoon.me</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/logo.png" type="image/png">
+    <link rel="icon" href="/img/logo.png" type="image/png">
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
