--- a/views/template/header.html
+++ b/views/template/header.html
@@ -55,7 +55,7 @@
           <a href="/leaderboard">Leaderboard</a>
           <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
-          <a href="https://nxt-old.tothemoon.me/play" style="
+          <a href="https://btc-old.tothemoon.me/play" style="
             color: orange;
             border: 2px solid grey;
             padding: 5px;">Switch Design</a>
@@ -77,7 +77,7 @@
           <a href="/leaderboard">Leaderboard</a>
           <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
-          <a href="https://nxt-old.tothemoon.me/play" style="
+          <a href="https://btc-old.tothemoon.me/play" style="
             color: orange;
             border: 2px solid grey;
             padding: 5px;">Switch Design</a>          
