--- a/client/css/header.css
+++ b/client/css/header.css
@@ -119,3 +119,32 @@
 @media only screen and (min-width: 90.063em) and (max-width: 120em) { } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
 
 @media only screen and (min-width: 120.063em) { } /* min-width 1921px, xxlarge screens */
+
+.currency-selector {
+  color: #008cba;
+  cursor: pointer;
+}
+
+.currency-selector:hover > .currencies {
+    display: block;
+}
+
+.currency-selector .currencies {
+    display: none;
+    position: absolute;
+    width: 100px;
+    border: 2px solid grey;
+}
+
+.currencies ul {
+    list-style: none;
+    margin: 5px 0 5px 0;
+}
+
+.currencies ul li {
+    padding-top: 2px;
+}
+
+.currencies ul li a {
+    margin: 0;
+}
