--- a/views/template/header.html
+++ b/views/template/header.html
@@ -23,6 +23,15 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ   </a>
+                <div class="currency-selector">
+                    Change currency
+                    <div class="currencies">
+                    <ul>
+                        <li><a href="">BTC</a></li>
+                        <li><a href="">NXT</a></li>
+                    </ul>
+                    </div>
+                </div>
                 <a href="https://btc.tothemoon.me/play" style="
                   color: orange;
                   border: 2px solid grey;
