--- a/views/template/header.html
+++ b/views/template/header.html
@@ -27,8 +27,8 @@
                     Change currency
                     <div class="currencies">
                         <ul>
-                            <li><a href="">BTC</a></li>
-                            <li><a href="">NXT</a></li>
+                            <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
+                            <li><a href="https://nxt-old.tothemoon.me/">NXT</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,8 +46,8 @@
                     Change currency
                     <div class="currencies">
                         <ul>
-                            <li><a href="">BTC</a></li>
-                            <li><a href="">NXT</a></li>
+                            <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
+                            <li><a href="https://nxt-old.tothemoon.me/">NXT</a></li>
                         </ul>
                     </div>
                 </div>
