logged out change currency

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -82,6 +82,14 @@
             border: 2px solid grey;
             padding: 5px;">Switch Design</a>          
       </div>
+      <div class="account header-el dropdown-mode">
+        <a href="#">Change currency</a>
+        <span class="caret"></span>
+        <ul class="dropdown">
+          <li><a href="https://btc.tothemoon.me">BTC</a></li>
+          <li><a href="https://nxt.tothemoon.me">NXT</a></li>
+        </ul>
+      </div>
       </nav>
     {{?}}
 </header>
