Add currency selector

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -24,6 +24,15 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ   </a>
+                <div class="currency-selector">
+                     Change currency
+                     <div class="currencies">
+                         <ul>
+                             <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
+                             <li><a href="https://nxt-old.tothemoon.me/">NXT</a></li>
+                         </ul>
+                     </div>
+                 </div>
                 <a href="https://nxt.tothemoon.me/play" style="
                   color: orange;
                   border: 2px solid grey;
@@ -35,6 +44,15 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ</a>
+                <div class="currency-selector">
+                     Change currency
+                     <div class="currencies">
+                         <ul>
+                             <li><a href="https://btc-old.tothemoon.me/">BTC</a></li>
+                             <li><a href="https://nxt-old.tothemoon.me/">NXT</a></li>
+                         </ul>
+                     </div>
+                 </div>
                 <a href="https://nxt.tothemoon.me/play" style="
                   color: orange;
                   border: 2px solid grey;
