--- a/views/template/header.html
+++ b/views/template/header.html
@@ -77,6 +77,7 @@
           <a href="/leaderboard">Leaderboard</a>
           <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
+          </div>
           <div class="account header-el dropdown-mode">
         <a href="#">Change currency</a>
         <span class="caret"></span>
@@ -85,6 +86,7 @@
           <li><a href="https://nxt.tothemoon.me">NXT</a></li>
         </ul>
       </div>
+       <div class="menu header-el">
           <a href="https://btc-old.tothemoon.me/play" style="
             color: orange;
             border: 2px solid grey;
